[tool.poetry]
name = "multiple-pdf-chat"
version = "0.1.0"
description = ""
authors = ["romaurino <rodrigomaurino@hotmail.com>"]
readme = "README.md"
packages = [{include = "multiple_pdf_chat"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
